# NormaAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.infra.yml  docker-compose.local-llm.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.rls.yml  docker-compose.yml  generate_codex_pdf.ps1  pyproject.toml  run_tests.ps1  smoke_codex_flow.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  validation.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_enable_rls_policies.py  003_temporal_metadata.py  004_normattiva_cove_fields.py  005_add_leads_table.py  006_lead_download_email_tracking.py  007_extend_leads_for_outreach.py  008_suppression_list_and_kpi_views.py
dashboard/: Dashboard.html  chrome.jsx  components.jsx  data.jsx  interactive.jsx  sections.jsx  styles.css
docs/: BACKUP_STRATEGY.md  DEPLOY_HETZNER.md  DEPLOY_READINESS.md  RUNBOOK.md
docs/legal/: DPA_template_clienti.md
frontend/: .npmrc  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vitest.config.mts
frontend/public/: codex.html  scope-aiact.html  scope-csrd.html
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/components/: CompanyProfileForm.tsx  CookieBanner.tsx  ErrorBoundary.tsx  LegalLayout.tsx  LoadingSkeleton.tsx  Sidebar.tsx  StreamingResponse.tsx  Topbar.tsx
frontend/src/hooks/: useAuth.tsx  useLocale.tsx  useSSEStream.ts
frontend/src/lib/: api.ts  auth.ts  confidence-labels.ts  mock-data.ts  types.ts
infra/: Caddyfile  prometheus.rules.yml  prometheus.yml
normaai_test_framework/: .~lock.NormaAI_Confusion_Matrix.xlsx#  NormaAI_Confusion_Matrix.xlsx  README.md  results_to_excel.py  synthetic_profiles.py  test_results.json  test_runner.py
normaai_test_framework/synthetic_docs/: DEFECT_MAP.md  DPA_TalentLens_FLAWED.md  Privacy_Policy_VisionGuard_FLAWED.md  Sustainability_Report_GreenGrid_FLAWED.md
prompts/: cove_extract_claims.txt  cove_plan_verification.txt  cove_revise_draft.txt  cove_verify_claim.txt  gap_analyst.txt  qa_bot.txt  regulatory_monitor.txt
scripts/: backup_postgres.ps1  backup_postgres.sh  export_training_data.py  finetune_router.py  generate_og_image.py  init_db.sql  redteam_openrouter.py  setup_app_role.sql  smoke_openrouter.py  validate_rls_two_tenant.py  verify_codex_citations.py  verify_live_site.ps1
src/: audit.py  cache.py  config.py  conversations.py  email_client.py  observability.py  pipeline.py  resilience.py
src/agents/: graph.py  llm.py  local_llm.py  nodes.py  router.py  sanitization.py  snc_layer.py  snc_node.py  streaming_llm.py  workflow_presets.yaml  workflow_presets_loader.py
src/agents/cove/: __init__.py  models.py  orchestrator.py
src/api/: app_state.py  landing.py  lifespan.py  main.py  middleware.py  rate_limit.py  schemas.py
src/api/routers/: __init__.py  alerts.py  clients.py  conversations.py  data.py  gdpr.py  intelligence.py  leads.py  reports.py  system.py
src/api/streaming/: __init__.py  generators.py  sse.py
src/auth/: brute_force.py  dependencies.py  router.py  security.py
src/crawler/: scheduler.py
src/crawler/eurlex/: client.py
src/crawler/normattiva/: INDEX.md  __init__.py  client.py  urn_validator.py
src/db/: engine.py  models.py
src/layers/: __init__.py
src/layers/acquisition/: __init__.py
src/layers/api/: __init__.py
src/layers/intelligence/: __init__.py  pipeline.py
src/layers/nlp/: __init__.py  prefixes.py  retrieval.py
src/layers/processing/: __init__.py  router.py
src/nlp/chunking/: contextual_chunker.py  legal_chunker.py  parent_retriever.py
src/nlp/embedding/: indexer.py
src/reports/: generator.py
tests/: conftest.py  test_agents.py  test_agents_graph.py  test_agents_llm.py  test_agents_nodes.py  test_alerts_router.py  test_api_integration.py  test_auth.py  test_auth_router.py  test_cache.py  test_cache_org_isolation.py  test_chunking.py  test_clients_router.py  test_config.py  test_contextual_chunker.py  test_conversations_router.py  test_conversations_service.py  test_cors_config.py  test_cove.py  test_cove_orchestrator.py  test_critical_routers.py  test_data_router.py  test_db_engine.py  test_db_models.py  test_dots_ocr_processor.py  test_eurlex_client.py  test_eurlex_client_more.py  test_gdpr_router.py  test_generators.py  test_hybrid_search.py  test_indexer.py  test_jwt_claims.py  test_leads.py  test_leads_router_more.py  test_libreoffice_converter.py  test_local_llm.py  test_local_router.py  test_monte_carlo.py  test_normattiva_client.py  test_normattiva_client_more.py  (+18 more)
tests/validation/: .env.example  README.md  README_VALIDATION.md  __init__.py  api_client.py  generate_golden_set.py  llm_judge.py  metrics.py  monte_carlo.py  promptfoo_config.yaml  response_parser.py  runner.py  sanctions_harvester.py  schemas.py  synthetic_generator.py
(+62 files in other folders)
